--- a/src/scss/utility-mixins/box-shadow.scss
+++ b/src/scss/utility-mixins/box-shadow.scss
@@ -36,11 +36,6 @@
     inset 0 -#{$gl-border-size-1} 0 0 $gray-200;
 }
 
-@mixin gl-inset-border-y-1-gray-400 {
-  box-shadow: inset 0 #{$gl-border-size-1} 0 0 $gray-400,
-    inset 0 -#{$gl-border-size-1} 0 0 $gray-400;
-}
-
 @mixin gl-inset-border-y-1-gray-100 {
   box-shadow: inset 0 #{$gl-border-size-1} 0 0 $gray-100,
     inset 0 -#{$gl-border-size-1} 0 0 $gray-100;
